# first-unsafe-step-counterfactual-dpo

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: data_gen_train.yaml  data_gen_val.yaml  defaults.yaml  domain_map.example.yaml  domain_map.yaml  eval_main.yaml  eval_pilot.yaml  eval_prompt_only.yaml  eval_resume_after_base.yaml  eval_sparse_pilots.yaml  model_qwen25_7b.yaml  split_policy.yaml  train_dpo_main.yaml  train_dpo_pilot.yaml  train_dpo_sparse_pilot.yaml  train_sft_ablation.yaml
data/: README.md
deliverables/: manual_audit_queue_prompt_only.csv  manual_audit_queue_sparse_pilots.csv
docs/: ACCEPTANCE_CHECKLIST.md  CODEBASE_BLUEPRINT.md  CSV_OUTPUT_CONTRACTS.md  DATA_GENERATION_PROTOCOL.md  DAY_PLAN_14.md  DOMAIN_MAP_PROTOCOL.md  DRIFT_GUARDS.md  EVALUATION_PROTOCOL.md  EXECUTION_PRECEDENCE.md  EXTERNAL_DEPENDENCIES.md  FAILURE_POLICY.md  HUMAN_OPERATOR.md  LITERATURE_GROUNDING.md  ODCV_INTEGRATION_PLAYBOOK.md  PAPER_ASSETS.md  PAPER_SPEC.md  REVIEWER_REDTEAM.md  SSOT.md  STATE_DISCIPLINE.md  TASK_GRAPH.yaml
examples/: contract_example.json  counterfactual_rewrite_example.json  evaluation_result_example.json  judge_output_example.json  localization_record_example.json  preference_pair_example.json  run_summary_example.json  split_manifest_example.json  trajectory_step_example.json
manifests/: README.md  artifact_manifest.json  external_manifest.json  judge_manifest.json  split_manifest.json  train_corpus_repaired_v1.json  training_manifest.json
paper/: README.md  claims_checklist.yaml  figures_manifest.yaml  main.tex  outline.md  (+3 more)
(+160 files in other folders)
